--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port = 8090
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/Deal
 spring.datasource.username=postgres
 spring.datasource.password=q21117
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
