--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 server.port = 8090
 
+url="http://localhost:8087/conveyor/offers"
+url2="http://localhost:8087/conveyor/calculation"
+
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Deal
 spring.datasource.username=postgres
 spring.datasource.password=q21117
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=none
