--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ url2="http://localhost:8087/conveyor/calculation"
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
+spring.liquibase.enabled=true
+spring.liquibase.change-log=/src/main/resources/db/changelog/changelog.yaml
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/Deal
 spring.datasource.username=postgres
 spring.datasource.password=q21117
