--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ url2="http://localhost:8087/conveyor/calculation"
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 spring.liquibase.enabled=true
-spring.liquibase.change-log=/src/main/resources/db/changelog/changelog.yaml
+spring.liquibase.change-log=db/changelog/changelog.yaml
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Deal
 spring.datasource.username=postgres
@@ -15,3 +15,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=none
+
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: ERROR
