миграции работают, исправлены ошибки (кроме тестов)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.liquibase.change-log=db/changelog/changelog.yaml
 spring.datasource.url=jdbc:postgresql://localhost:5432/Deal
 spring.datasource.username=postgres
 spring.datasource.password=q21117
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=none
