--- a/src/main/resources/db/changelog/changeset/create-loan_offer_dto-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-loan_offer_dto-table.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
       id: create-offer
-      author: Eugene
+      author: Eugene31
       changes:
         - createTable:
-            tableName: offer
+            tableName: offer_dto
             columns:
               - column:
                   name: application_id
